2008-09-07  Jörgen Scheibengruber  <mfcn@gmx.de>

	* src/netspeed.c (update_quality_icon), (device_change_cb),
	(settings_cb):
	Remove confusing option "always monitor connected device" and instead add
	an entry "Default" into the devices combo. Using this one will make
	netspeed always monitor the device with the default route set (see
	#503818). Fixes #434287.

2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>

	* src/netspeed.c (update_quality_icon):
	Make the scaling for the wireless inidcator logarithmic

2008-08-24  Jörgen Scheibengruber  <mfcn@gmx.de>

	* src/netspeed.c (update_applet):
	Patch by Marius Gedminas; Should fix #503518

2008-03-04  Jaap Haitsma  <jaap@haitsma.org>

	* icons/Makefile.am:
	* icons/scalable/apps/netspeed-applet.svg:
	Add scalable icon. Icons done by jimmac. Fixes #517809

2008-03-02  Jaap Haitsma  <jaap@haitsma.org>

	* src/netspeed.c: (change_icons), (about_cb):
	Point to new homepage

2008-02-22  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_NetspeedApplet.server.in.in:
	* Makefile.am:
	* configure.in:
	* icons/16x16/Makefile.am:
	* icons/16x16/apps/Makefile.am:
	* icons/16x16/devices/Makefile.am:
	* icons/22x22/Makefile.am:
	* icons/22x22/apps/Makefile.am:
	* icons/24x24/Makefile.am:
	* icons/24x24/apps/Makefile.am:
	* icons/24x24/status/Makefile.am:
	* icons/32x32/Makefile.am:
	* icons/32x32/apps/Makefile.am:
	* icons/48x48/Makefile.am:
	* icons/48x48/apps/Makefile.am:
	* icons/Makefile.am:
	* icons/scalable/Makefile.am:
	* icons/scalable/apps/Makefile.am:
	* icons/svg-source/netspeed.svg:
	* pixmaps/Makefile.am:
	* src/netspeed.c: (netspeed_applet_factory):
	Use new netspeed icon. Partially fixes bug #517809. Scalable icon still
	needed

2008-02-17  Jaap Haitsma  <jaap@haitsma.org>

	* src/netspeed.c: (showinfo_cb), (netspeed_applet_factory):
	Some indentation fixes

2008-02-17  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in:
	* src/netspeed.c: (open_uri), (display_help), (handle_links):
	Remove dependency on libgnomeui
