@@ -27,19 +27,21 @@ AC_SUBST(NETSPEED_APPLET_LIBS)
 
 GNOME_DOC_INIT
 
+ac_have_iwevgenie=no
 AC_MSG_CHECKING([for wireless-tools >= 28pre9])
-AC_TRY_COMPILE([#include <iwlib.h>],
-               [#ifndef IWEVGENIE
+AC_COMPILE_IFELSE([
+		#include <iwlib.h>
+                #ifndef IWEVGENIE
                 #error "not found"
                 #endif],
-               [ac_have_iwevgenie=yes],
-               [ac_have_iwevgenie=no])
-AC_MSG_RESULT($ac_have_iwevgenie)
-if test "$ac_have_iwevgenie" = no; then
-        AC_MSG_ERROR(wireless-tools >= 28pre9 not installed or not functional)
+               ac_have_iwevgenie=yes
+)
+AC_MSG_RESULT([$ac_have_iwevgenie])
+if test "$ac_have_iwevgenie" = yes; then
+        AC_DEFINE(HAVE_IW, 1, [Defined if you have wirelesstools])
+	IWLIB=-liw
+	AC_SUBST(IWLIB)
 fi
-IWLIB=-liw
-AC_SUBST(IWLIB)
 
 AC_OUTPUT([
 netspeed_applet.spec
